--- a/frontend/src/styles/SelfEmpathyPage.css
+++ b/frontend/src/styles/SelfEmpathyPage.css
@@ -6,7 +6,7 @@
   width: 100%;
 }
 
-.self-empathy-page .div {
+.self-empathy-page .background {
   background-image: url(../assets/images/self-empathy-bg.png);
   background-position: 50% 50%;
   background-size: cover;
