--- a/frontend/src/styles/SelfEmpathyStep2Page.css
+++ b/frontend/src/styles/SelfEmpathyStep2Page.css
@@ -186,6 +186,24 @@
   transition: all 0.3s ease;
 }
 
+.self-empathy-step2-page .answer-input.step7{
+  position: relative;
+  width: 290px;
+  height: 100px;
+  margin-top: 10px;
+  border-radius: 20px;
+  background: rgba(238, 238, 238, 0.4);
+  border: none;
+  color: black;
+  font-size: 13px;
+  line-height: 24px;
+  padding: 16px;
+  resize: none;
+  opacity: 0;
+  animation: fadeIn 1s ease-out forwards 1.4s;
+  transition: all 0.3s ease;
+}
+
 .self-empathy-step2-page .answer-input::placeholder {
   color: rgba(0, 0, 0, 0.4);
 }
@@ -201,7 +219,6 @@
   left: 282px;
   background: none;
   border: none;
-  cursor: pointer;
   padding: 0;
   width: 68px;
   height: 68px;
@@ -214,6 +231,27 @@
 .self-empathy-step2-page .next-button img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
+}
+
+.self-empathy-step2-page .send-button {
+  position: absolute;
+  top: 683px;
+  left: 22px;
+  background: none;
+  border: none;
+  padding: 0;
+  width: 316px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.3s ease;
+}
+
+.self-empathy-step2-page .send-button img {
+  width: 130%;
+  height: 130%;
   object-fit: contain;
 }
 
