--- a/frontend/src/styles/SelfEmpathyEmotion.css
+++ b/frontend/src/styles/SelfEmpathyEmotion.css
@@ -1,9 +1,9 @@
 .emotion-icons-row {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 20px;
-  margin: 5px 0 20px 0;
 }
 
 .emotion-icon-btn {
@@ -57,17 +57,16 @@
   padding: 10px 0px 10px 0px;
   margin: 0 auto;
   justify-content: center;
-  max-width: 340px;
+  max-width: 320px;
   width: 100%;
-  margin-top: -15px;
-  max-height: 330px;
-  overflow-y: auto;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  max-height: 390px;
+  margin-top: 10px;
+  overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
-  scrollbar-width: none;
-}
-
-.feeling-list::-webkit-scrollbar {
-  display: none;
+  scrollbar-width: auto;
 }
 
 .feeling-btn {
@@ -97,4 +96,24 @@
 .feeling-btn.selected.negative {
   background: #e3f0ff;
   color: #3578c6;
+}
+
+@media screen and (max-width: 360px) {
+  .emotion-icons-row {
+    top: 28vh;
+  }
+  
+  .feeling-list {
+    top: 36vh;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .emotion-icons-row {
+    top: 32vh;
+  }
+  
+  .feeling-list {
+    top: 40vh;
+  }
 }
