--- a/frontend/src/styles/SelfEmpathyEmotion.css
+++ b/frontend/src/styles/SelfEmpathyEmotion.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 1vh;
 }
 
 .emotion-icon-btn {
@@ -51,24 +51,24 @@
 
 .feeling-list {
   display: grid;
-  grid-template-columns: repeat(3, 90px);
-  gap: 5px 10px;
+  grid-template-columns: repeat(3, 25vw);
+  gap: 1.4vw 2.8vw;
   background: rgba(255,255,255,0.5);
   border-radius: 24px;
-  padding: 10px 0px 10px 0px;
+  padding: 2.8vw 0;
   margin: 0 auto;
   justify-content: center;
-  max-width: 320px;
+  max-width: 87vw;
   width: 100%;
-  max-height: 50vh;
+  max-height: 41vh;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   scrollbar-width: auto;
 }
 
 .feeling-btn {
-  width: 90px;
-  height: 44px;
+  width: 25vw;
+  height: 11vw;
   border: none;
   border-radius: 40px;
   background: #f5f5f5;
